@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# axHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }

abstract class AbstractBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- AbstractBullet

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- ElitEnemy
AbstractAircraft <|-- Prop_Blood
AbstractAircraft <|-- Prop_Bomb
AbstractAircraft <|-- Prop_Bullet

AbstractBullet <|-- HeroBullet
AbstractBullet <|-- EnemyBullet

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class ElitEnemy {
    - shootNum:int
    - power:int
    - direction:int
    + ElitEnemy(int locationX, int locationY,
    int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class Prop_Blood {
    + Prop_Blood(int locationX, int locationY,
    int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class Prop_Bomb {
    + Prop_Bomb(int locationX, int locationY,
    int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class Prop_Bullet {
    + Prop_Bullet(int locationX, int locationY,
    int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}




@enduml